# ebird-analyse

./: .env.sample  .gitignore  README.md  data_collector.py  data_gatherer.py  main.py  pyproject.toml  requirements.txt  util.py
data/complete/: complete_dataset_goes_here.md
data_handler/: __init__.py  base.py  data_fetcher.py  ebird_data_handler.py  manual_collected_data_handler.py  weather_data_handler.py
notebooks/: __init__.py  _helper.py  data_cleaning.ipynb  data_preprocessing.ipynb
notes/: weather_data_time_inconsitency.tsv
